--- a/src/pages/public/PublicSchedulePage.module.scss
+++ b/src/pages/public/PublicSchedulePage.module.scss
@@ -208,6 +208,10 @@
   font-weight: $font-weight-semibold;
   color: $color-text;
   margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  min-width: 0;
 }
 
 .time {
